// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gap[Base] should render correctly  1`] = `
<div
  style="margin-bottom: -8px; margin-right: -8px; width: 400px;"
>
  <div
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-trc8a3 cvey2f3"
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Button
      </span>
    </button>
  </div>
  <div
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-trc8a3 cvey2f3"
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Button
      </span>
    </button>
  </div>
  <div
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-trc8a3 cvey2f3"
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Button
      </span>
    </button>
  </div>
  <div
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-trc8a3 cvey2f3"
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Button
      </span>
    </button>
  </div>
  <div
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-trc8a3 cvey2f3"
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Button
      </span>
    </button>
  </div>
  <div
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-trc8a3 cvey2f3"
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Button
      </span>
    </button>
  </div>
  <div
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-trc8a3 cvey2f3"
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Button
      </span>
    </button>
  </div>
  <div
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-trc8a3 cvey2f3"
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Button
      </span>
    </button>
  </div>
  <div
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-trc8a3 cvey2f3"
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Button
      </span>
    </button>
  </div>
  <div
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-trc8a3 cvey2f3"
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about align 1`] = `
<div
  class="cw6sirj"
>
  <div
    class="c-emivhp c-wsxxws"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      flex-start
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      center
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      flex-end
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      baseline
    </span>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about custom 1`] = `
<div
  style="display: flex; align-items: center; margin-bottom: 16px;"
>
  <div
    style="width: 80px;"
  >
    column:
  </div>
  <div
    class="cmzo79z"
    style="flex: 1;"
  >
    <div
      class="cj1pxn3"
    >
      <div
        class="ccmbr"
        style="left: 0%; right: 92%;"
      >
        <div
          class="c-7ssxpp c-uua2rc"
        />
        <div
          class="c-5umq26 cj2iwmt"
        >
          8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about vertical 1`] = `
<div
  style="margin-bottom: -10px; margin-right: -8px; width: 400px; flex-direction: column;"
>
  <div
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c-trc8a3 cvey2f3"
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Button
      </span>
    </button>
  </div>
  <div
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c-trc8a3 cvey2f3"
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Button
      </span>
    </button>
  </div>
  <div
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c-trc8a3 cvey2f3"
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Button
      </span>
    </button>
  </div>
  <div
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c-trc8a3 cvey2f3"
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Button
      </span>
    </button>
  </div>
</div>
`;
